# titaatit_can_adapter

./: .gitignore  README.md
application/can_adapter_app/: CMakeLists.txt  prj.conf
application/can_adapter_app/Core/inc/: can.hpp  gpio.hpp  timer.hpp  usb_acm.hpp
application/can_adapter_app/Core/src/: can.cpp  gpio.cpp  timer.cpp  usb_acm.cpp
application/can_adapter_app/SoftwareVersion/: SOFTWARE_VERSION  app_version.h  version.h.in  version.py
application/can_adapter_app/User/inc/: canfd_forward_protocol.hpp  fsm.hpp  gpios_control.hpp  monitor.hpp  mosfet_control.hpp  ring_buf.hpp
application/can_adapter_app/User/src/: canfd_forward_protocol.cpp  fsm.cpp  gpios_control.cpp  main.cpp  mosfet_control.cpp  ring_buf.cpp
application/can_adapter_app/src/: main.c
application/ddt_titaatit_can_adapter_app/: README.md  prj.conf
application/ddt_titaatit_can_adapter_app/src/: acm.c  acm.h  boot.h  can.c  can.h  main.c  protocol.c  protocol.h  struct.h
boards/can_adapter_board/: Kconfig.can_adapter  Kconfig.defconfig  board.cmake  board.yml  can_adapter.dts  can_adapter.yaml  can_adapter_defconfig
boards/ddt_titaatit_can_adapter_board/: Kconfig.board  Kconfig.defconfig  README.md  board.cmake  nucleo_g474re.dts  nucleo_g474re.yaml  nucleo_g474re_defconfig
bootloader/can_adapter_bootloader/: CMakeLists.txt  code_format.sh  prj.conf
bootloader/can_adapter_bootloader/Core/inc/: boot_can.hpp  can.hpp  dev_info.hpp  flash.hpp  timer.hpp
bootloader/can_adapter_bootloader/Core/src/: boot_can.cpp  can.cpp  dev_info.cpp  flash.cpp  timer.cpp
bootloader/can_adapter_bootloader/SoftwareVersion/: SOFTWARE_VERSION  app_version.h  version.cmake
bootloader/can_adapter_bootloader/User/inc/: boot.hpp
bootloader/can_adapter_bootloader/User/src/: boot.cpp  main.cpp  ring_buf.cpp
